Fixed: #1130 - Make execution engine and on_event wrapper configurable